--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "dependencies": {
     "@electron/remote": "^2.1.2",
+    "concurrently": "^9.1.2",
+    "electron": "^36.3.1",
+    "wait-on": "^8.0.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -40,10 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "concurrently": "^9.1.2",
-    "electron": "^36.3.1",
-    "wait-on": "^8.0.3"
   }
 }
