--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "private": true,
   "dependencies": {
     "@electron/remote": "^2.1.2",
-    "concurrently": "^9.1.2",
-    "electron": "^36.3.1",
-    "wait-on": "^8.0.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "better-sqlite3": "^11.10.0",
+    "concurrently": "^9.1.2",
+    "electron": "^36.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "^5.0.1",
+    "wait-on": "^8.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
