--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "better-sqlite3": "^11.10.0",
     "concurrently": "^9.1.2",
     "electron": "^36.3.1",
+    "jquery": "^3.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
