--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "better-sqlite3": "^11.10.0",
-    "concurrently": "^9.1.2",
-    "electron": "^36.3.1",
     "jquery": "^3.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "^5.0.1",
-    "wait-on": "^8.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -26,7 +23,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "concurrently \"npm start\" \"npm run electron\"",
-    "electron": "wait-on tcp:3000 && electron ."
+    "electron": "wait-on tcp:3000 && electron .",
+    "package": "npm run build && electron-builder"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +43,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2",
+    "electron": "^36.3.1",
+    "electron-builder": "^26.0.12",
+    "wait-on": "^8.0.3"
   }
 }
