--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "better-sqlite3": "^11.10.0",
     "electron-is-dev": "^3.0.1",
     "framer-motion": "^12.15.0",
+    "fuse.js": "^7.1.0",
     "jquery": "^3.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
